Added new functionality
