# api/swagger/swagger.yaml
@@ -70,9 +70,9 @@ paths:
           description: unique object task name
           required: true
           type: string
-          name: description
+        - name: description
           in: query
-          description: utask description
+          description: task description
           required: true
           type: string
      
@@ -103,6 +103,19 @@ paths:
           name: id 
           in: query
           description: unique object id
+          required: true
+          type: string
+          
+        -
+          name: name
+          in: query
+          description: unique task name
+          required: true
+          type: string
+        -
+          name: description
+          in: query
+          description: description of the task
           required: true
           type: string
       
@@ -152,52 +165,9 @@ paths:
             type: string
             example: "Cannot find Task"
   
-  /task?task_name=:
-    get:
-      description: |
-        Gets `Task` object by id.
-        
-         # This is array of GET operation parameters:
-      parameters:
-        # An example parameter that is in query and is required
-        -
-          name: name
-          in: query
-          description: unique object name
-          required: true
-          type: string
-          
-     
-      responses:
-        # Response code
-        200:
-          description: Successful response
-          # A schema describing your response object.
-          # Use JSON Schema format
-          schema:
-              title: TaskObject
-              type: object
-              properties:
-                id:
-                  type: string
-                  example: "1"
-                name:
-                  type: string
-                  example: "task1"
-                description:
-                  type: string
-                  example: "Mow the lawn"
-                date_created:
-                  type: string
-                  example: "2015-06-03T23:49:18.059Z"
-        500:
-          description: Error
-          schema: 
-            type: string
-            example: "Cannot find Task"
+  
 
-
-  /tasks/:
+  /tasks/id:
     get:
     
       description: |
@@ -242,6 +212,51 @@ paths:
           schema: 
             type: string
             example: "Cannot find Task"
+      
+  /search:
+    get:
+    
+      description: |
+        Gets `Task` object by id.
+        
+         # This is array of GET operation parameters:
+      parameters:
+        # An example parameter that is in query and is required
+        -
+          name: name
+          in: query
+          description: unique task object name
+          required: true
+          type: string
+          
+     
+      responses:
+        # Response code
+        200:
+          description: Successful response
+          # A schema describing your response object.
+          # Use JSON Schema format
+          schema:
+              title: TaskObject
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: "1"
+                name:
+                  type: string
+                  example: "task1"
+                description:
+                  type: string
+                  example: "Mow the lawn"
+                date_created:
+                  type: string
+                  example: "2015-06-03T23:49:18.059Z"
                   
+        500:
+          description: Error
+          schema: 
+            type: string
+            example: "Cannot find Task"                
   
 
